--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,29 +3,68 @@
     <div class='col-md-3'>
       <h2>User info</h2>
       <%= render 'users/info', user: @user %>
-      
+
       <h2 class="mt-3">New book</h2>
-      
+
       <%= render 'form', book: @book_new %>
     </div>
+
+
+
+
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
   		<table class='table'>
   		  <tr>
-  		    <td><%= link_to user_path(@book.user) do %>
-            <%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-icon.jpg") %><br>
-            <%= @book.user.name %>
+  		    <td>
+  		      <%= link_to user_path(@book.user) do %>
+              <%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-icon.jpg") %><br>
+              <%= @book.user.name %>
             <% end %>
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
-          
+
+
+
+          <td>
+            <div class="comments">
+              <p>コメント件数：<%= @book.book_comments.count %></p>
+            </div>
+          </td>
+
+
+
           <% if current_user.id == @book.user_id %>
           <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
           <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
+
         </tr>
       </table>
+      
+      <table>
+        <tbody>
+        <% @book.book_comments.each do |book_comment| %>
+          <tr>
+            <td><%= attachment_image_tag book_comment.user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg" %></td>
+            <td><%= book_comment.comment %></td>
+          </tr>
+          <tr>
+            <td><%= link_to book_comment.user.name, user_path(book_comment.user.id)%></td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+
+
+      <div class="new-comment">
+        <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
+          <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
+          <%= f.submit "送信する" %>
+        <% end %>
+      </div>
+
     </div>
   </div>
 </div>
