--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -42,13 +42,19 @@
 
         </tr>
       </table>
-      
+
       <table>
         <tbody>
         <% @book.book_comments.each do |book_comment| %>
           <tr>
             <td><%= attachment_image_tag book_comment.user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg" %></td>
             <td><%= book_comment.comment %></td>
+
+            <% if book_comment.user == current_user %>
+            <td class="comment-delete">
+              <%= link_to "Destroy", book_book_comment_path(book_comment.book_id, book_comment.id), method: :delete %>
+            </td>
+            <% end %>
           </tr>
           <tr>
             <td><%= link_to book_comment.user.name, user_path(book_comment.user.id)%></td>
