--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,6 +16,15 @@
         </td>
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+        
+        <td
+        
+        <td>
+          <div class="comments">
+            <p>コメント件数：<%= book.book_comments.count %></p>
+          </div>
+        </td>
+        
       </tr>
     <% end %>
   </tbody>
