--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,6 +27,27 @@
 
 
 
+
+          <td>
+          <% if @book.favorited_by?(current_user) %>
+            <p>
+              <%= link_to book_favorites_path(@book), method: :delete do %>
+                ♥<%= @book.favorites.count %> いいね
+              <% end %>
+            </p>
+          <% else %>
+            <p>
+              <%= link_to book_favorites_path(@book), method: :post do %>
+                ♡<%= @book_new.favorites.count %> いいね
+              <% end %>
+            </p>
+          <% end %>
+          </td>
+
+
+
+
+
           <td>
             <div class="comments">
               <p>コメント件数：<%= @book.book_comments.count %></p>
