--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -1,5 +1,7 @@
 <table class='table'>
-  <tr><%= attachment_image_tag(user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg") %></tr>
+  <tr>
+    <%= attachment_image_tag(user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg") %>
+  </tr>
   <tr>
 	  <th>name</th>
 	  <th><%= user.name %></th>
@@ -8,32 +10,34 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  
   <tr>
+    <th>follows</th>
     <th>
-      <div class="following">
-        <p>フォロー数：<%= user.followings.count %></p>
-      </div>
+      <%= link_to user.followings.count, user_followings_index_path(user.id) %>
     </th>
   </tr>
   <tr>
+    <th>followers</th>
     <th>
-      <div class="follower">
-        <p>フォロワー数：<%= user.followers.count %></p>
-      </div>
+      <%= link_to user.followers.count, user_followers_index_path(user.id) %>
     </th>
   </tr>
-  <tr>
-    <th>
+  
+  
+</table>
+
+  
+      
       <% if current_user != user %>
         <% if user.followed_by?(current_user) %>
-        <p><%=link_to "フォロー済み", user_relationships_path(user.id), method: :delete %></p>
-      <% else %>
-        <p><%=link_to "フォローする", user_relationships_path(user.id), method: :post %></p>
+        <%=link_to "フォロー済み", user_relationships_path(user.id), method: :delete, class: "btn btn-success" %>
+        <% else %>
+        <%=link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-info" %>
         <% end %>
       <% end %>
-    </th>
-  </tr>
-</table>
+    
+    
 
 <div class='row'>
   <%= link_to '',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
