--- a/app/views/searches/search_result.html.erb
+++ b/app/views/searches/search_result.html.erb
@@ -1,24 +1,66 @@
-<h2>Results index</h2>
-
 <table class="table table-hover table-inverse">
-  
+
   <% if @range == "User" %>
+
+    <h1>Users search for "〇〇"</h1>
+    <thead>
+      <tr>
+        <th colspan="1"></th>
+        <th>Name</th>
+        <th colspan="4"></th>
+      </tr>
+    </thead>
     <tbody>
       <% @users.each do |user| %>
         <tr>
+          <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
           <td><%= user.name %></td>
+
+          <td>
+            <div class="following">
+              <p>フォロー数：<%= user.followings.count %></p>
+            </div>
+          </td>
+          <td>
+            <div class="follower">
+              <p>フォロワー数：<%= user.followers.count %></p>
+            </div>
+          </td>
+          <td>
+          <% if current_user != user %>
+            <% if user.followed_by?(current_user) %>
+              <p><%=link_to "フォロー済み", user_relationships_path(user.id), method: :delete %></p>
+          　<% else %>
+              <p><%=link_to "フォローする", user_relationships_path(user.id), method: :post %></p>
+            <% end %>
+          <% end %>
+          </td>
+
+          <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
         </tr>
       <% end %>
     </tbody>
+
   <% else %>
-    
+
+    <h1>Books search for "〇〇"</h1>
+    <thead>
+      <tr>
+        <th colspan="1"></th>
+        <th>Title</th>
+        <th>Opinion</th>
+      </tr>
+    </thead>
+    <tbody>
     <tbody>
       <% @books.each do |book| %>
         <tr>
-          <td><%= book.title %></td>
+          <td><%= attachment_image_tag(book.user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
+          <td><%= link_to book.title, user_path(book.user) %></td>
           <td><%= book.body %></td>
         </tr>
       <% end %>
     </tbody>
+
   <% end %>
 </table>
