--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,38 +24,15 @@
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
-
-
-
-
-          <td>
-          <% if @book.favorited_by?(current_user) %>
-            <p>
-              <%= link_to book_favorites_path(@book), method: :delete do %>
-                ♥<%= @book.favorites.count %> いいね
-              <% end %>
-            </p>
-          <% else %>
-            <p>
-              <%= link_to book_favorites_path(@book), method: :post do %>
-                ♡<%= @book_new.favorites.count %> いいね
-              <% end %>
-            </p>
-          <% end %>
-          </td>
-
-
-
-
-
+          
+          <%= render 'favorites/favorites',book: @book %>
+          
           <td>
             <div class="comments">
               <p>コメント件数：<%= @book.book_comments.count %></p>
             </div>
           </td>
-
-
-
+          
           <% if current_user.id == @book.user_id %>
           <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
           <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
