--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,7 +17,9 @@
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
         
-        <%= render 'favorites/favorites',book: @books %>
+        <td id="favorite_buttons_<%= book.id %>">
+        　<%= render 'favorites/favorite',book: book %>
+        </td>
         
         <td>
           <div class="comments">
