--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,9 +25,9 @@
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
           
-          <div id="favorite_buttons_<%= @book.id %>">
+          <td id="favorite_buttons_<%= @book.id %>">
             <%= render 'favorites/favorite',book: @book %>
-          <div>
+          </td>
           
           <td>
             <div class="comments">
