--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,17 +24,17 @@
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
-          
+
           <td id="favorite_buttons_<%= @book.id %>">
             <%= render 'favorites/favorite',book: @book %>
           </td>
-          
+
           <td>
             <div class="comments">
               <p>コメント件数：<%= @book.book_comments.count %></p>
             </div>
           </td>
-          
+
           <% if current_user.id == @book.user_id %>
           <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
           <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
@@ -44,28 +44,14 @@
       </table>
 
       <table>
-        <tbody>
-        <% @book.book_comments.each do |book_comment| %>
-          <tr>
-            <td><%= attachment_image_tag book_comment.user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg" %></td>
-            <td><%= book_comment.comment %></td>
-
-            <% if book_comment.user == current_user %>
-            <td class="comment-delete">
-              <%= link_to "Destroy", book_book_comment_path(book_comment.book_id, book_comment.id), method: :delete %>
-            </td>
-            <% end %>
-          </tr>
-          <tr>
-            <td><%= link_to book_comment.user.name, user_path(book_comment.user.id)%></td>
-          </tr>
-        <% end %>
+        <tbody class="comment-index">
+          <%= render 'book_comments/b_comments',book: @book %>
         </tbody>
       </table>
 
 
-      <div class="new-comment">
-        <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
+      <div class="comment-form">
+        <%= form_with(model:[@book, @book_comment], remote: true) do |f| %>
           <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
           <%= f.submit "送信する" %>
         <% end %>
