--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,12 +25,12 @@
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
 
-          <td id="favorite_buttons_<%= @book.id %>">
+          <td class="favorite_buttons_<%= @book.id %>"><%#なぜidがいる？%>
             <%= render 'favorites/favorite',book: @book %>
           </td>
 
           <td>
-            <div class="comments">
+            <div class="comments-index">
               <p>コメント件数：<%= @book.book_comments.count %></p>
             </div>
           </td>
