--- a/app/views/favorites/create.js.erb
+++ b/app/views/favorites/create.js.erb
@@ -1,1 +1,1 @@
-$("#favorite_button_<%= @book.id %>").html("<%= j(render partial: 'favorites/favorite', locals: {book: @book}) %>");
+$(".favorite_buttons_<%= @book.id %>").html("<%= j(render partial: 'favorites/favorite', locals: {book: @book}) %>");
