--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,9 +17,9 @@
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
 
-        <td id="favorite_buttons_<%= book.id %>">
+        <td class="favorite_buttons_<%= book.id %>">
         　<%= render 'favorites/favorite',book: book %>
-        </>
+        </td>
 
         <td>
           <div class="comments">
