--- a/app/views/book_comments/destroy.js.erb
+++ b/app/views/book_comments/destroy.js.erb
@@ -1,1 +1,2 @@
-$(".comment-index").html("<%= j(render partial: 'book_comments/b_comments', locals: {book: @book}) %>")
+$(".comment-count").html("コメント数: <%= @book.book_comments.count %>");
+$(".comment-index").html("<%= j(render partial: 'book_comments/b_comments', locals: {book: @book}) %>");
