--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,7 +17,7 @@
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
 
-        <td class="favorite_buttons_<%= book.id %>">
+        <td class="favorite_buttons_<%= book.id %>"><%#eachで回しているからidいる%><%#部分的に指定しているから%>
         　<%= render 'favorites/favorite',book: book %>
         </td>
 
