--- a/app/views/chats/create.js.erb
+++ b/app/views/chats/create.js.erb
@@ -1,2 +1,2 @@
-$('.message').append("<p style='text-align: left;'><%= @chat.message %></p>");
+$('.message').prepend("<p style='text-align: right;'><%= @chat.message %></p>");<%# appendが最後に追加・prependが最初に追加%>
 $('input[type=text]').val('')
