--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,42 +1,27 @@
-<div class="container">
-    <div class="row">
-        <div class="col-xs-6">
-            <h2 id="room" data-room="<%= @room.id %>" data-user="<%= current_user.id %>"><%= @user.name %> さんとのチャット</h2>
+<h1 id="room" data-room="<%= @room.id %>" data-user="<%= current_user.id %>"><%= @user.name %> さんとのチャット</h1>
 
-            <table class="message table">
-              <thead>
-                <tr>
-                  <th style="text-align: left; font-size: 20px;"><%= current_user.name %></th>
-                  <th style="text-align: right; font-size: 20px;"><%= @user.name %></th>
-                </tr>
-              </thead>
-              <% @chats.each do |chat| %>
-                <% if chat.user_id == current_user.id %>
-                <tbody>
-                  <tr>
-                    <th>
-                      <p style="text-align: left;"><%= chat.message %></p>
-                    </th>
-                    <th></th>
-                  </tr>
-                </tbody>
-                <% else %>
-                <tbody>
-                  <tr>
-                    <th></th>
-                    <th>
-                      <p style="text-align: right;"><%= chat.message %></p>
-                    </th>
-                  </tr>
-                </tbody>
-                <% end %>
-              <% end %>
-            </table>
 
-            <%= form_with model: @chat do |f| %>
-              <%= f.text_field :message %>
-              <%= f.hidden_field :room_id %>
-            <% end %>
-        </div>
-    </div>
+<%= form_with model: @chat do |f| %>
+    <%= f.text_field :message %>
+    <%= f.hidden_field :room_id %>
+    <%= f.submit %>
+  <% end %>
+
+  <%= paginate @chats %>
+
+<div class="message">
+
+
+
+
+  <% @chats.each do |chat| %>
+    <% if chat.user_id == current_user.id %>
+      <p style="text-align: right;"><%= chat.message %></p>
+    <% else %>
+      <p style="text-align: left;"><%= chat.message %></p>
+    <% end %>
+  <% end %>
+
 </div>
+
+  
